# ffxiv_screenshot_organiser

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  main.c
src/: main.cpp  main.rs
